--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -57,7 +57,7 @@
 
     <string name="send_available_btc">Σύνολο: %2$s BTC (%1$s XMR)</string>
 
-    <string name="info_paymentid_intergrated">ID πληρωμής ενσωματωμένο</string>
+    <string name="info_paymentid_integrated">&#x2714; ID πληρωμής ενσωματωμένο</string>
     <string name="info_prepare_tx">Προετοιμασία της συναλλαγής σου</string>
 
     <string name="label_send_progress_xmrto_create">Δημιουργία εντολής με XMR.TO</string>
