--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -59,7 +59,7 @@
 
     <string name="send_available_btc">Zostatok: %2$s BTC (%1$s XMR)</string>
 
-    <string name="info_paymentid_intergrated">Payment ID integrované</string>
+    <string name="info_paymentid_integrated">&#x2714; Payment ID integrované</string>
     <string name="info_prepare_tx">Pripravujem transakciu</string>
 
     <string name="label_send_progress_xmrto_create">Vytváram objednávku na XMR.TO</string>
