upgrade to monero v0.15

--- a/app/src/main/res/values-cat/strings.xml
+++ b/app/src/main/res/values-cat/strings.xml
@@ -170,14 +170,14 @@
     <string name="generate_fingerprint_warn"><![CDATA[
         <strong>Autenticació d’empremta digitals</strong>
         <p>Amb l’autenticació d’empremta digital habilitada podeu veure el balanç del portamonedes i rebre fons
-         sense la necessitat d'introduir la contrasenya.</p>
+         sense la necessitat d’introduir la contrasenya.</p>
         <p>Per a més seguretat, monerujo encara us demanarà que introduïu la contrasenya per
          veure els detalls del portamonedes o enviar fons.</p>
         <strong>Advertència de seguretat</strong>
         <p>Finalment, monerujo vol recordar-li que qualsevol que pugui obtenir la seva empremta digital serà
          capaç d’observar el balanç del seu portamonedes.</p>
         <p>Per exemple, un usuari maliciós del vostre voltant pot obrir la vostra cartera quan esteu dormint.</p>
-        <strong>Esteu segurs d'habilitar aquesta funcionalitat?</strong>
+        <strong>Esteu segurs d’habilitar aquesta funcionalitat?</strong>
     ]]></string>
     <string name="generate_bad_passwordB">La contrasenya no coincideix</string>
     <string name="generate_empty_passwordB">La contrasenya no pot estar buida</string>
