--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -268,7 +268,7 @@
 
     <string name="receive_amount_hint">Mennyiség</string>
     <string name="receive_cannot_open">Nem sikerült megnyitni a tárcát!</string>
-    <string name="receive_paymentid_invalid">16 vagy 64 hexadecimális karakter (0&#8211;9,a&#8211;f)</string>
+    <string name="receive_paymentid_invalid">16 hexadecimális karakter (0&#8211;9,a&#8211;f)</string>
     <string name="receive_integrated_paymentid_invalid">Integrált cím esetén üresnek kell lennie</string>
 
     <string name="receive_amount_too_big">Max. %1$s</string>
