--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -269,7 +269,7 @@
 
     <string name="receive_amount_hint">Сумма</string>
     <string name="receive_cannot_open">Не удалось открыть кошелек!</string>
-    <string name="receive_paymentid_invalid">Система счисления - 16 или 64(0&#8211;9,a&#8211;f)</string>
+    <string name="receive_paymentid_invalid">Система счисления - 16 (0&#8211;9,a&#8211;f)</string>
     <string name="receive_integrated_paymentid_invalid">Должно быть пустым со встроенным адресом</string>
 
     <string name="receive_amount_too_big">Max. %1$s</string>
