--- a/app/src/main/res/values-ua/strings.xml
+++ b/app/src/main/res/values-ua/strings.xml
@@ -19,7 +19,7 @@
     <string name="password_very_strong">Відмінно! У кращих традиціях h4x0r!</string>
 
     <string name="label_login_wallets">Гаманець</string>
-    <string name="label_credits">Інформація</string>
+    <string name="label_credits">Подяка</string>
     <string name="label_ok">Ok</string>
     <string name="label_cancel">Відміна</string>
     <string name="label_close">Закрити</string>
@@ -104,14 +104,14 @@
 
     <string name="label_daemon">Віддалений вузол</string>
     <string name="status_wallet_loading">Завантаження гаманця &#8230;</string>
-    <string name="status_wallet_unloaded">Гаманець записаний</string>
-    <string name="status_wallet_unload_failed">Помилка запису гаманця!</string>
+    <string name="status_wallet_unloaded">Гаманець збережено</string>
+    <string name="status_wallet_unload_failed">Помилка збереження гаманця!</string>
     <string name="status_wallet_connecting">Підключення &#8230;</string>
     <string name="status_wallet_connect_failed">Помилка підключення до віддаленого вузла!\nПеревірте username/password</string>
-    <string name="status_wallet_node_invalid">Помилка віддаленого вузла!\nПопробуйте ще раз.</string>
+    <string name="status_wallet_node_invalid">Помилка віддаленого вузла!\nСпробуйте ще раз.</string>
     <string name="status_wallet_connect_ioex">Неможливо підключиться до віддаленого вузла!\nПопробуйте пізніше.</string>
 
-    <string name="status_wallet_disconnected">Розєднано</string>
+    <string name="status_wallet_disconnected">Роз&apos;єднано</string>
 
     <string name="status_transaction_failed">Помилка транзакції: %1$s</string>
 
@@ -163,12 +163,12 @@
     <string name="message_exchange_failed">Неможливо отримати курс обміну!\nВикористовуйте XMR/XMR або спробуйте ще раз</string>
 
     <string name="generate_title">Створити гаманець</string>
-    <string name="generate_name_hint">імя гаманця</string>
+    <string name="generate_name_hint">Ім&apos;я гаманця</string>
     <string name="generate_password_hint">Пароль гаманця</string>
     <string name="generate_fingerprint_hint">Дозволити відкрити гаманець за допомогою відбитка пальця</string>
     <string name="generate_fingerprint_warn"><![CDATA[
-        <strong>Використання аутентифікації по відбиткам пальців</strong>
-        <p>З підтримкою аутентифікації по відбиткам пальців, ви можете переглядати баланс і отримувати кошти
+        <strong>Використання аутентифікації по відбитку пальця</strong>
+        <p>З підтримкою аутентифікації по відбитку пальця, ви можете переглядати баланс і отримувати кошти
          без введення пароля.</p>
         <p>Але для додаткової безпеки, monerujo попросить вас ввести пароль при
          перегляді деталей гаманця, або відправці коштів.</p>
@@ -183,7 +183,7 @@
     <string name="generate_buttonGenerate">Зробіть мені вже гаманець!</string>
     <string name="generate_button_accept">Я ввів мнемонічну фразу</string>
 
-    <string name="generate_wallet_name">Придумай мені імя!</string>
+    <string name="generate_wallet_name">Придумай мені ім&apos;я!</string>
     <string name="generate_wallet_exists">Такий гаманець існує!</string>
     <string name="generate_wallet_dot">Не може починатися з .</string>
     <string name="generate_wallet_creating">Створення гаманця</string>
@@ -214,9 +214,9 @@
 
     <string name="send_amount_btc_xmr">%1$s (приблизно)</string>
 
-    <string name="send_paymentid_hint">ID платежу (необязательно)</string>
+    <string name="send_paymentid_hint">ID платежу (необов&apos;язково)</string>
     <string name="send_amount_hint">0.00</string>
-    <string name="send_notes_hint">Персональна замітка (необовязково)</string>
+    <string name="send_notes_hint">Персональна замітка (необов&apos;язково)</string>
     <string name="send_generate_paymentid_hint">Генерація</string>
     <string name="send_send_label">Витратити мої солодкі Moneroj</string>
     <string name="send_send_timed_label">Витратити мої солодкі Moneroj (%1$s)</string>
@@ -259,7 +259,7 @@
     <string name="tx_fee">Комісія</string>
     <string name="tx_transfers">Перекази</string>
     <string name="tx_notes">Замітки</string>
-    <string name="tx_notes_hint">(необовязково)</string>
+    <string name="tx_notes_hint">(необов&apos;язково)</string>
     <string name="tx_button_notes">Збережено</string>
     <string name="tx_notes_set_failed">Помилка збереження замітки</string>
     <string name="tx_title">Детально</string>
@@ -326,67 +326,67 @@
     <string name="nfc_tag_read_success">Читання мітки завершено успішно</string>
     <string name="nfc_tag_tap">NFC доступний!</string>
 
-    <string name="receive_desc_hint">Опис (необовязково)</string>
+    <string name="receive_desc_hint">Опис (необов&apos;язково)</string>
 
     <string name="send_address_not_openalias">Адреса OpenAlias недоступна</string>
     <string name="send_address_openalias">OpenAlias безпечний &#x2714;</string>
     <string name="send_address_resolve_openalias">Дозволи OpenAlias&#8230;</string>
     <string name="send_address_no_dnssec">OpenAlias без DNSSEC - адреса може бути підмінена</string>
 
-    <string name="status_wallet_connect_wrongversion">Node version incompatible - please upgrade!</string>
+    <string name="status_wallet_connect_wrongversion">Версія вузла несумісна - будь ласка обновіть!</string>
 
     <string name="menu_info">Інформация</string><!--Changed to: Show Secrets!-->
-    <string name="menu_streetmode">Street Mode</string>
+    <string name="menu_streetmode">Вуличний Режим</string>
 
-    <string name="info_nodes_enabled">Node-o-matiC enabled, tap for more info.</string>
-    <string name="node_height">Last block updated: %1$s</string>
-    <string name="label_nodes">Nodes</string>
-    <string name="node_name_hint">Node Name (Optional)</string>
-    <string name="node_address_hint">Hostname</string>
-    <string name="node_port_hint">Port</string>
-    <string name="node_user_hint">Username (Optional)</string>
-    <string name="node_pass_hint">Password (Optional)</string>
-    <string name="node_host_unresolved">Cannot resolve host</string>
-    <string name="node_host_empty">We need this!</string>
-    <string name="node_port_numeric">Must be numeric</string>
-    <string name="node_port_range">Must be 1&#8211;65535</string>
-    <string name="node_fab_add">Add Node</string>
-    <string name="node_refresh_hint">Touch to refresh!</string>
-    <string name="node_test_error">CONNECTION ERROR %1$d</string>
-    <string name="node_general_error">CONNECTION ERROR</string>
-    <string name="node_auth_error">AUTHENTICATION FAILED</string>
-    <string name="node_result_label">Test Result:</string>
-    <string name="node_result">Height: %1$s (v%2$d), Ping: %3$.0fms, IP: %4$s</string>
-    <string name="node_testing">Testing IP: %1$s &#8230;</string>
-    <string name="node_refresh_wait">Please wait for scan to finish</string>
-    <string name="node_create_hint">Touch to select or add nodes</string>
-    <string name="node_pull_hint">Add nodes manually or pull down to scan</string>
-    <string name="node_scanning">Scanning network&#8230;</string>
-    <string name="node_nobookmark">Automatically bookmarked best %1$d nodes</string>
-    <string name="label_test">Test</string><!--note: as in "Test a network connection"-->
+    <string name="info_nodes_enabled">Node-o-matiC включений, натисніть щоб отримати більше інформації.</string>
+    <string name="node_height">Останній блок: %1$s</string>
+    <string name="label_nodes">Вузли</string>
+    <string name="node_name_hint">Ім&apos;я вузла (опційно)</string>
+    <string name="node_address_hint">Ім&apos;я хоста</string>
+    <string name="node_port_hint">Порт</string>
+    <string name="node_user_hint">Ім&apos;я користувача (опційно)</string>
+    <string name="node_pass_hint">Пароль (опційно)</string>
+    <string name="node_host_unresolved">Не вдається підключитися до вузлу</string>
+    <string name="node_host_empty">Нам це потрібно!</string>
+    <string name="node_port_numeric">Повинно бути число</string>
+    <string name="node_port_range">Повинно бути 1&#8211;65535</string>
+    <string name="node_fab_add">Добавити вузол</string>
+    <string name="node_refresh_hint">Натисніть, щоб обновити!</string>
+    <string name="node_test_error">ПОМИЛКА З&apos;ЄДНАННЯ %1$d</string>
+    <string name="node_general_error">ПОМИЛКА З&apos;ЄДНАННЯ</string>
+    <string name="node_auth_error">ПОМИЛКА АУТЕНТИФІКАЦІЇ</string>
+    <string name="node_result_label">Результат Тестування:</string>
+    <string name="node_result">Висота: %1$s (v%2$d), Пінг: %3$.0fms, IP: %4$s</string>
+    <string name="node_testing">Тестування IP: %1$s &#8230;</string>
+    <string name="node_refresh_wait">Будь ласка, дочекайтеся закінчення сканування</string>
+    <string name="node_create_hint">Натисніть, щоб вибрати або додати вузли</string>
+    <string name="node_pull_hint">Добавте вузли вручну або потягніть вниз для сканування</string>
+    <string name="node_scanning">Сканування мережі&#8230;</string>
+    <string name="node_nobookmark">Автоматично відмічені кращі %1$d вузли</string>
+    <string name="label_test">Провірка</string><!--note: as in "Test a network connection"-->
 
-    <string name="backup_success">Backup successful</string>
+    <string name="backup_success">Резервне копіювання успішне</string>
 
-    <string name="send_address_resolve_bip70">Resolving Payment URI&#8230;</string>
-    <string name="send_address_not_bip70">Could not resolve Payment URI</string>
-    <string name="send_address_bip70">Resolved Payment URI &#x2714;</string>
+    <string name="send_address_resolve_bip70">Розміщення URI платежу&#8230;</string>
+    <string name="send_address_not_bip70">Не вдалося вирішити URI платіж</string>
+    <string name="send_address_bip70">URI вирішеного платежу &#x2714;</string>
     <!-- please verify this means "Receiver" or "Recipient" as in "Receiver in the transaction" -->
-    <string name="send_address_hint">Receiver</string>
+    <string name="send_address_hint">Отримувач</string>
 
-    <string name="xmrto_error_001">XMR.TO offline - try again later</string>
-    <string name="xmrto_error_004">BTC amount out of bounds</string>
-    <string name="xmrto_error_010">Invalid or outdated Payment URL</string>
-    <string name="xmrto_error_012">Too many requests</string>
+    <string name="xmrto_error_001">XMR.TO недоступний - спробуйте пізніше</string>
+    <string name="xmrto_error_004">Сума BTC виходить за допустимі ліміти</string>
+    <string name="xmrto_error_010">Невірний або застарілий платіжний URL</string>
+    <string name="xmrto_error_012">Перевищено кількість запитів</string>
 
-    <string name="street_sweep_amount">EVERYTHING!</string> <!-- as in: "everything in the account" = "all the money" -->
+    <string name="street_sweep_amount">ВСЕ!</string> <!-- as in: "everything in the account" = "all the money" -->
 
-    <string name="menu_ledger_seed">Convert Ledger Seed</string>
-    <string name="prompt_ledger_seed">Ledger Seed Words</string>
-    <string name="prompt_ledger_phrase">Ledger Passphrase (optional)</string>
-    <string name="bad_ledger_seed">Invalid Ledger Seed!</string>
-    <string name="prompt_ledger_seed_warn">Entering your Ledger Seed here is a major security risk!</string>
+    <string name="menu_ledger_seed">Конвертувати фразу Ledger</string>
+    <string name="prompt_ledger_seed">Словесна фраза Ledger</string>
+    <string name="prompt_ledger_phrase">Пароль Ledger (необов&apos;язково)</string>
+    <string name="bad_ledger_seed">Помилка Ledger фрази!</string>
+    <string name="prompt_ledger_seed_warn">Вводячи сюди Ledger фразу являється серйозною загрозою для вашої безпеки!</string>
 
     <string name="label_restoreheight">Відновити висоту</string> <!-- Restore Height -->
 
-    <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
+    <string name="toast_ledger_start_app">Запуск Monero додатку через %1$s</string>
 </resources>
