--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -387,4 +387,6 @@
     <string name="label_restoreheight">Visszaállítási lánchossz</string> <!-- Restore Height -->
 
     <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
+
+    <string name="menu_rescan">Rescan!</string>
 </resources>
