--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -389,4 +389,6 @@
     <string name="label_restoreheight">Hauteur de restauration</string> <!-- Restore Height -->
 
     <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
+
+    <string name="menu_rescan">Rescan!</string>
 </resources>
