--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -377,4 +377,6 @@
     <string name="label_restoreheight">Restaurar da altura</string> <!-- Restore Height -->
 
     <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
+
+    <string name="menu_rescan">Rescan!</string>
 </resources>
